# graphql-scalars

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: post-commit.yml
graphql_scalars/: __init__.py  restricted_primitive.py
graphql_scalars/scalars/: __init__.py
tests/: conftest.py  utils.py
tests/scalars/: test_date_time.py  test_json.py  test_timestamp.py  test_void.py
